tests/mermaid_test_cases/invalid_syntax_failure/expected.mermaid
flowchart TD
    A[Start] --> B{Decision}
    B -->|"- Option 1"| C[Process 1]
    C --> D[End]